# irl-chess

./: .gitignore  .gitmodules  Makefile  ProjectPlan.txt  README.md  TODO.txt  data.dvc  find_interesting_comparison.py  irl_chess_env.yml  load_studies.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  sunfish-AD3520168423.err  sunfish-AD3520168423.out  sunfish-D3520168438.err  sunfish-permuted20023095.err  sunfish-permuted20023107.err  sunfish-permuted20023107.out  sunfish-permuted20069416.err  sunfish-permuted20069416.out  sunfish-permuted20069438.err  sunfish-permuted20069438.out  sunfish-permuted20069617.out  sunfish-permuted20168382.err  sunfish-permuted20168405.err  sunfish-permuted20168405.out  test_chess960.ipynb  test_topk.ipynb  version_explanation.txt
.dvc/: config
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
downloads/: lichess_websites.txt
experiment_configs/: base_config.json  model_config_example.json
hpc-submit/: copy-paste-command  submit-bayesian.sh  submit-depth-comparison.sh  submit-native-bo.sh  submit-native.sh  submit-permute-native.sh  submit-permute.sh  submit-plot-permute-native.sh  submit-plot-permute.sh  submit-run-maia-replicate-fab.sh  submit-run-model-fab.sh  submit-run-model-gab.sh  submit-run-model-nik.sh  submit-run-model.sh  submitCPU.sh  time_limit_plots.sh
irl_chess/: __init__.py  bayesian_optimisation.py  multi_processing_test.py  plot_sunfish_native.py  plot_sunfish_permuted.py  predictHumanMoves.ipynb  replicate_maia.py  run_model.py  run_plot_sunfish_weights.py  (+8 more)
(+575 files in other folders)
