[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chess_irl"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Fab", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["chess_irl"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
