[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "irl_chess"
version = "0.1.0"
description = """
A forray into inverse requirement learning applications in chess to infer the reward function of players, 
ascertaining an empirical estimate of their intention when it is unclear even to themselves.
"""
authors = [
  { name = "Gabriel Agerholm Ruge", email = "gabrielruge@gmail.com" },
]

readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["irl_chess"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
